--- a/TemplateSuggs/ArthurSuggestedTemplate/index.html
+++ b/TemplateSuggs/ArthurSuggestedTemplate/index.html
@@ -29,7 +29,7 @@
 					<div class="row">
 						<div class="col">
 							<div class="top_bar_content d-flex flex-row align-items-center justify-content-start">
-								<div class="top_bar_phone"><span class="top_bar_title">phone:</span>+44 300 303 0266</div>
+								<div class="top_bar_phone"><span class="top_bar_title">Teléfono:</span>7771142928</div>
 								<div class="top_bar_right ml-auto">
 
 									<!-- Language -->
@@ -37,12 +37,12 @@
 										<span class="top_bar_title">idioma:</span>
 										<ul class="lang_list">
 											<li class="hassubs">
-												<a href="#">English<i class="fa fa-angle-down" aria-hidden="true"></i></a>
+												<a href="#">Español<i class="fa fa-angle-down" aria-hidden="true"></i></a>
 												<ul>
-													<li><a href="#">Ukrainian</a></li>
-													<li><a href="#">Japanese</a></li>
-													<li><a href="#">Lithuanian</a></li>
-													<li><a href="#">Swedish</a></li>
+													<li><a href="#">Ingles</a></li>
+													<li><a href="#">Frances</a></li>
+													<li><a href="#">Japones</a></li>
+													<li><a href="#">Noimporta</a></li>
 													<li><a href="#">Italian</a></li>
 												</ul>
 											</li>
@@ -74,17 +74,17 @@
 						<div class="header_content d-flex flex-row align-items-center justify-content-start">
 							<div class="logo_container mr-auto">
 								<a href="#">
-									<div class="logo_text">Hello</div>
+									<div class="logo_text">Beatriz Castañeda</div>
 								</a>
 							</div>
 							<nav class="main_nav_contaner">
 								<ul class="main_nav">
-									<li class="active"><a href="index.html">Home</a></li>
-									<li><a href="courses.html">Courses</a></li>
-									<li><a href="instructors.html">Instructors</a></li>
-									<li><a href="#">Events</a></li>
-									<li><a href="blog.html">Blog</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li class="active"><a href="index.html">Inicio</a></li>
+									<li><a href="courses.html">Cursos</a></li>
+									<li><a href="instructors.html">Galeria</a></li>
+									<li><a href="#">Eventos</a></li>
+									<li><a href="blog.html">Conocenos</a></li>
+									<li><a href="contact.html">Contacto</a></li>
 								</ul>
 							</nav>
 							<div class="header_content_right ml-auto text-right">
@@ -153,14 +153,12 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="home_background" style="background-image: url(images/index_background.jpg);"></div>
 		<div class="home_content">
 			<div class="container">
 				<div class="row">
 					<div class="col text-center">
 						<h1 class="home_title">DIAGNÓSTICO Y REHABILITACIÓN</h1>
 						<h1 class="home_title">PSICOPEDAGÓGICA</h1>
-						<div class="home_button trans_200"><a href="#">Inicio</a></div>
 					</div>
 				</div>
 			</div>
@@ -168,18 +166,16 @@
 	</div>
 
 	<!-- Language -->
-
+<!-- 
 	<div class="language">
 		<div class="container">
 			<div class="row">
 				<div class="col">
 					<div class="language_slider_container">
 						
-						<!-- Language Slider -->
 
 						<div class="owl-carousel owl-theme language_slider">
 
-							<!-- Flag -->
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/Ukrainian.svg" alt=""></div>
@@ -187,7 +183,6 @@
 								</a>
 							</div>
 
-							<!-- Flag -->
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/Japanese.svg" alt=""></div>
@@ -195,7 +190,6 @@
 								</a>
 							</div>
 
-							<!-- Flag -->
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/Lithuanian.svg" alt=""></div>
@@ -203,7 +197,6 @@
 								</a>
 							</div>
 
-							<!-- Flag -->
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/Swedish.svg" alt=""></div>
@@ -211,7 +204,6 @@
 								</a>
 							</div>
 
-							<!-- Flag -->
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/English.svg" alt=""></div>
@@ -219,7 +211,6 @@
 								</a>
 							</div>
 
-							<!-- Flag -->
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/Italian.svg" alt=""></div>
@@ -227,7 +218,6 @@
 								</a>
 							</div>
 
-							<!-- Flag -->
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/Chinese.svg" alt=""></div>
@@ -235,7 +225,6 @@
 								</a>
 							</div>
 
-							<!-- Flag -->
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/French.svg" alt=""></div>
@@ -243,7 +232,6 @@
 								</a>
 							</div>
 
-							<!-- Flag -->
 							<div class="owl-item language_item">
 								<a href="#">
 									<div class="flag"><img src="images/German.svg" alt=""></div>
@@ -259,8 +247,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
-
+	</div> -->
 	<!-- Courses -->
 
 	<div class="courses">
