--- a/Arturo/PageTest/pixels/index.html
+++ b/Arturo/PageTest/pixels/index.html
@@ -25,7 +25,7 @@
 
   <header role="banner" class="probootstrap-header">
     <div class="container">
-        <a href="index.html" class="probootstrap-logo">Pixels<span>.</span></a>
+        <a href="index.html" class="probootstrap-logo">Consultoria BC<span>.</span></a>
         
         <a href="#" class="probootstrap-burger-menu visible-xs" ><i>Menu</i></a>
         <div class="mobile-menu-overlay"></div>
@@ -59,7 +59,7 @@
             <div class="row">
               <div class="col-md-10 col-md-offset-1">
                 <div class="probootstrap-slider-text text-center">
-                  <h1 class="probootstrap-heading probootstrap-animate mb20">We Are Creative Agency</h1>
+                  <h1 class="probootstrap-heading probootstrap-animate mb20">Diagnóstico</h1>
                   <div class="probootstrap-animate probootstrap-sub-wrap mb30">A new website template by <a href="https://uicookies.com/">uicookies.com</a> under license <a href="https://uicookies.com/license/">Creative Commons 3.0</a></div>
                   <p class="probootstrap-animate"><a href="#" class="btn btn-ghost btn-ghost-white">Download This Template</a></p>
                 </div>
@@ -73,7 +73,7 @@
             <div class="row">
               <div class="col-md-10 col-md-offset-1">
                 <div class="probootstrap-slider-text text-center">
-                  <h1 class="probootstrap-heading probootstrap-animate mb20">Award Winning Agency</h1>
+                  <h1 class="probootstrap-heading probootstrap-animate mb20">DIAGNÓSTICO Y REHABILITACIÓN   PSICOPEDAGÓGICA  PARA    NIÑOS  Y  ADOLESCENTES</h1>
                   <div class="probootstrap-animate probootstrap-sub-wrap mb30">A new website template by <a href="https://uicookies.com/">uicookies.com</a> under license <a href="https://uicookies.com/license/">Creative Commons 3.0</a></div>
                   <p class="probootstrap-animate"><a href="#" class="btn btn-ghost btn-ghost-white">Download This Template</a></p>
                 </div>
